// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic should assign a ref 1`] = `
Component {
  "_reactInternalInstance": Object {},
  "_reactInternals": FiberNode {
    "_debugHookTypes": null,
    "_debugID": 12,
    "_debugNeedsRemount": false,
    "_debugOwner": FiberNode {
      "_debugHookTypes": null,
      "_debugID": 11,
      "_debugNeedsRemount": false,
      "_debugOwner": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 10,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": null,
        "child": [Circular],
        "childLanes": 0,
        "dependencies": null,
        "elementType": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "firstEffect": [Circular],
        "flags": 0,
        "index": 0,
        "key": null,
        "lanes": 0,
        "lastEffect": [Circular],
        "memoizedProps": Object {
          "children": "Hello world",
        },
        "memoizedState": null,
        "mode": 0,
        "nextEffect": null,
        "pendingProps": Object {
          "children": "Hello world",
        },
        "ref": Object {
          "current": [Circular],
        },
        "return": FiberNode {
          "_debugHookTypes": null,
          "_debugID": 8,
          "_debugNeedsRemount": false,
          "_debugOwner": null,
          "_debugSource": null,
          "actualDuration": 0,
          "actualStartTime": -1,
          "alternate": FiberNode {
            "_debugHookTypes": null,
            "_debugID": 8,
            "_debugNeedsRemount": false,
            "_debugOwner": null,
            "_debugSource": null,
            "actualDuration": 0,
            "actualStartTime": -1,
            "alternate": [Circular],
            "child": null,
            "childLanes": 0,
            "dependencies": null,
            "elementType": null,
            "firstEffect": null,
            "flags": 0,
            "index": 0,
            "key": null,
            "lanes": 1,
            "lastEffect": null,
            "memoizedProps": null,
            "memoizedState": null,
            "mode": 0,
            "nextEffect": null,
            "pendingProps": null,
            "ref": null,
            "return": null,
            "selfBaseDuration": 0,
            "sibling": null,
            "stateNode": FiberRootNode {
              "_debugRootType": "createLegacyRoot()",
              "callbackNode": null,
              "callbackPriority": 15,
              "containerInfo": Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "isHidden": false,
                        "tag": "TEXT",
                        "text": "Hello world",
                      },
                    ],
                    "internalInstanceHandle": FiberNode {
                      "_debugHookTypes": null,
                      "_debugID": 13,
                      "_debugNeedsRemount": false,
                      "_debugOwner": [Circular],
                      "_debugSource": null,
                      "actualDuration": 0,
                      "actualStartTime": -1,
                      "alternate": null,
                      "child": FiberNode {
                        "_debugHookTypes": null,
                        "_debugID": 14,
                        "_debugNeedsRemount": false,
                        "_debugOwner": null,
                        "_debugSource": null,
                        "actualDuration": 0,
                        "actualStartTime": -1,
                        "alternate": null,
                        "child": null,
                        "childLanes": 0,
                        "dependencies": null,
                        "elementType": null,
                        "firstEffect": null,
                        "flags": 0,
                        "index": 0,
                        "key": null,
                        "lanes": 0,
                        "lastEffect": null,
                        "memoizedProps": "Hello world",
                        "memoizedState": null,
                        "mode": 0,
                        "nextEffect": null,
                        "pendingProps": "Hello world",
                        "ref": null,
                        "return": [Circular],
                        "selfBaseDuration": 0,
                        "sibling": null,
                        "stateNode": Object {
                          "isHidden": false,
                          "tag": "TEXT",
                          "text": "Hello world",
                        },
                        "tag": 6,
                        "treeBaseDuration": 0,
                        "type": null,
                        "updateQueue": null,
                      },
                      "childLanes": 0,
                      "dependencies": null,
                      "elementType": "Text",
                      "firstEffect": null,
                      "flags": 0,
                      "index": 0,
                      "key": null,
                      "lanes": 0,
                      "lastEffect": null,
                      "memoizedProps": Object {
                        "children": "Hello world",
                      },
                      "memoizedState": null,
                      "mode": 0,
                      "nextEffect": null,
                      "pendingProps": Object {
                        "children": "Hello world",
                      },
                      "ref": null,
                      "return": [Circular],
                      "selfBaseDuration": 0,
                      "sibling": null,
                      "stateNode": [Circular],
                      "tag": 5,
                      "treeBaseDuration": 0,
                      "type": "Text",
                      "updateQueue": null,
                    },
                    "isHidden": false,
                    "props": Object {
                      "children": "Hello world",
                    },
                    "rootContainerInstance": [Circular],
                    "tag": "INSTANCE",
                    "type": "Text",
                  },
                ],
                "createNodeMock": [Function],
                "tag": "CONTAINER",
              },
              "context": Object {},
              "current": [Circular],
              "entangledLanes": 0,
              "entanglements": Array [
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "eventTimes": Array [
                -1,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "expirationTimes": Array [
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
              ],
              "expiredLanes": 0,
              "finishedLanes": 0,
              "finishedWork": null,
              "hydrate": false,
              "interactionThreadID": 2,
              "memoizedInteractions": Set {},
              "mutableReadLanes": 0,
              "pendingChildren": null,
              "pendingContext": null,
              "pendingInteractionMap": Map {},
              "pendingLanes": 0,
              "pingCache": null,
              "pingedLanes": 0,
              "suspendedLanes": 0,
              "tag": 0,
              "timeoutHandle": -1,
            },
            "tag": 3,
            "treeBaseDuration": 0,
            "type": null,
            "updateQueue": Object {
              "baseState": null,
              "effects": null,
              "firstBaseUpdate": Object {
                "callback": null,
                "eventTime": 170,
                "lane": 1,
                "next": null,
                "payload": Object {
                  "element": <Memo>
                    Hello world
                  </Memo>,
                },
                "tag": 0,
              },
              "lastBaseUpdate": Object {
                "callback": null,
                "eventTime": 170,
                "lane": 1,
                "next": null,
                "payload": Object {
                  "element": <Memo>
                    Hello world
                  </Memo>,
                },
                "tag": 0,
              },
              "shared": Object {
                "pending": null,
              },
            },
          },
          "child": [Circular],
          "childLanes": 0,
          "dependencies": null,
          "elementType": null,
          "firstEffect": [Circular],
          "flags": 256,
          "index": 0,
          "key": null,
          "lanes": 0,
          "lastEffect": [Circular],
          "memoizedProps": null,
          "memoizedState": Object {
            "element": <Memo>
              Hello world
            </Memo>,
          },
          "mode": 0,
          "nextEffect": null,
          "pendingProps": null,
          "ref": null,
          "return": null,
          "selfBaseDuration": 0,
          "sibling": null,
          "stateNode": FiberRootNode {
            "_debugRootType": "createLegacyRoot()",
            "callbackNode": null,
            "callbackPriority": 15,
            "containerInfo": Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "isHidden": false,
                      "tag": "TEXT",
                      "text": "Hello world",
                    },
                  ],
                  "internalInstanceHandle": FiberNode {
                    "_debugHookTypes": null,
                    "_debugID": 13,
                    "_debugNeedsRemount": false,
                    "_debugOwner": [Circular],
                    "_debugSource": null,
                    "actualDuration": 0,
                    "actualStartTime": -1,
                    "alternate": null,
                    "child": FiberNode {
                      "_debugHookTypes": null,
                      "_debugID": 14,
                      "_debugNeedsRemount": false,
                      "_debugOwner": null,
                      "_debugSource": null,
                      "actualDuration": 0,
                      "actualStartTime": -1,
                      "alternate": null,
                      "child": null,
                      "childLanes": 0,
                      "dependencies": null,
                      "elementType": null,
                      "firstEffect": null,
                      "flags": 0,
                      "index": 0,
                      "key": null,
                      "lanes": 0,
                      "lastEffect": null,
                      "memoizedProps": "Hello world",
                      "memoizedState": null,
                      "mode": 0,
                      "nextEffect": null,
                      "pendingProps": "Hello world",
                      "ref": null,
                      "return": [Circular],
                      "selfBaseDuration": 0,
                      "sibling": null,
                      "stateNode": Object {
                        "isHidden": false,
                        "tag": "TEXT",
                        "text": "Hello world",
                      },
                      "tag": 6,
                      "treeBaseDuration": 0,
                      "type": null,
                      "updateQueue": null,
                    },
                    "childLanes": 0,
                    "dependencies": null,
                    "elementType": "Text",
                    "firstEffect": null,
                    "flags": 0,
                    "index": 0,
                    "key": null,
                    "lanes": 0,
                    "lastEffect": null,
                    "memoizedProps": Object {
                      "children": "Hello world",
                    },
                    "memoizedState": null,
                    "mode": 0,
                    "nextEffect": null,
                    "pendingProps": Object {
                      "children": "Hello world",
                    },
                    "ref": null,
                    "return": [Circular],
                    "selfBaseDuration": 0,
                    "sibling": null,
                    "stateNode": [Circular],
                    "tag": 5,
                    "treeBaseDuration": 0,
                    "type": "Text",
                    "updateQueue": null,
                  },
                  "isHidden": false,
                  "props": Object {
                    "children": "Hello world",
                  },
                  "rootContainerInstance": [Circular],
                  "tag": "INSTANCE",
                  "type": "Text",
                },
              ],
              "createNodeMock": [Function],
              "tag": "CONTAINER",
            },
            "context": Object {},
            "current": [Circular],
            "entangledLanes": 0,
            "entanglements": Array [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "eventTimes": Array [
              -1,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "expirationTimes": Array [
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
            ],
            "expiredLanes": 0,
            "finishedLanes": 0,
            "finishedWork": null,
            "hydrate": false,
            "interactionThreadID": 2,
            "memoizedInteractions": Set {},
            "mutableReadLanes": 0,
            "pendingChildren": null,
            "pendingContext": null,
            "pendingInteractionMap": Map {},
            "pendingLanes": 0,
            "pingCache": null,
            "pingedLanes": 0,
            "suspendedLanes": 0,
            "tag": 0,
            "timeoutHandle": -1,
          },
          "tag": 3,
          "treeBaseDuration": 0,
          "type": null,
          "updateQueue": Object {
            "baseState": Object {
              "element": <Memo>
                Hello world
              </Memo>,
            },
            "effects": null,
            "firstBaseUpdate": null,
            "lastBaseUpdate": null,
            "shared": Object {
              "pending": null,
            },
          },
        },
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": null,
        "tag": 14,
        "treeBaseDuration": 0,
        "type": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "updateQueue": null,
      },
      "_debugSource": null,
      "actualDuration": 0,
      "actualStartTime": -1,
      "alternate": null,
      "child": [Circular],
      "childLanes": 0,
      "dependencies": null,
      "elementType": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
      "firstEffect": [Circular],
      "flags": 1,
      "index": 0,
      "key": null,
      "lanes": 0,
      "lastEffect": [Circular],
      "memoizedProps": Object {
        "children": "Hello world",
      },
      "memoizedState": null,
      "mode": 0,
      "nextEffect": null,
      "pendingProps": Object {
        "children": "Hello world",
      },
      "ref": Object {
        "current": [Circular],
      },
      "return": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 10,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": null,
        "child": [Circular],
        "childLanes": 0,
        "dependencies": null,
        "elementType": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "firstEffect": [Circular],
        "flags": 0,
        "index": 0,
        "key": null,
        "lanes": 0,
        "lastEffect": [Circular],
        "memoizedProps": Object {
          "children": "Hello world",
        },
        "memoizedState": null,
        "mode": 0,
        "nextEffect": null,
        "pendingProps": Object {
          "children": "Hello world",
        },
        "ref": Object {
          "current": [Circular],
        },
        "return": FiberNode {
          "_debugHookTypes": null,
          "_debugID": 8,
          "_debugNeedsRemount": false,
          "_debugOwner": null,
          "_debugSource": null,
          "actualDuration": 0,
          "actualStartTime": -1,
          "alternate": FiberNode {
            "_debugHookTypes": null,
            "_debugID": 8,
            "_debugNeedsRemount": false,
            "_debugOwner": null,
            "_debugSource": null,
            "actualDuration": 0,
            "actualStartTime": -1,
            "alternate": [Circular],
            "child": null,
            "childLanes": 0,
            "dependencies": null,
            "elementType": null,
            "firstEffect": null,
            "flags": 0,
            "index": 0,
            "key": null,
            "lanes": 1,
            "lastEffect": null,
            "memoizedProps": null,
            "memoizedState": null,
            "mode": 0,
            "nextEffect": null,
            "pendingProps": null,
            "ref": null,
            "return": null,
            "selfBaseDuration": 0,
            "sibling": null,
            "stateNode": FiberRootNode {
              "_debugRootType": "createLegacyRoot()",
              "callbackNode": null,
              "callbackPriority": 15,
              "containerInfo": Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "isHidden": false,
                        "tag": "TEXT",
                        "text": "Hello world",
                      },
                    ],
                    "internalInstanceHandle": FiberNode {
                      "_debugHookTypes": null,
                      "_debugID": 13,
                      "_debugNeedsRemount": false,
                      "_debugOwner": [Circular],
                      "_debugSource": null,
                      "actualDuration": 0,
                      "actualStartTime": -1,
                      "alternate": null,
                      "child": FiberNode {
                        "_debugHookTypes": null,
                        "_debugID": 14,
                        "_debugNeedsRemount": false,
                        "_debugOwner": null,
                        "_debugSource": null,
                        "actualDuration": 0,
                        "actualStartTime": -1,
                        "alternate": null,
                        "child": null,
                        "childLanes": 0,
                        "dependencies": null,
                        "elementType": null,
                        "firstEffect": null,
                        "flags": 0,
                        "index": 0,
                        "key": null,
                        "lanes": 0,
                        "lastEffect": null,
                        "memoizedProps": "Hello world",
                        "memoizedState": null,
                        "mode": 0,
                        "nextEffect": null,
                        "pendingProps": "Hello world",
                        "ref": null,
                        "return": [Circular],
                        "selfBaseDuration": 0,
                        "sibling": null,
                        "stateNode": Object {
                          "isHidden": false,
                          "tag": "TEXT",
                          "text": "Hello world",
                        },
                        "tag": 6,
                        "treeBaseDuration": 0,
                        "type": null,
                        "updateQueue": null,
                      },
                      "childLanes": 0,
                      "dependencies": null,
                      "elementType": "Text",
                      "firstEffect": null,
                      "flags": 0,
                      "index": 0,
                      "key": null,
                      "lanes": 0,
                      "lastEffect": null,
                      "memoizedProps": Object {
                        "children": "Hello world",
                      },
                      "memoizedState": null,
                      "mode": 0,
                      "nextEffect": null,
                      "pendingProps": Object {
                        "children": "Hello world",
                      },
                      "ref": null,
                      "return": [Circular],
                      "selfBaseDuration": 0,
                      "sibling": null,
                      "stateNode": [Circular],
                      "tag": 5,
                      "treeBaseDuration": 0,
                      "type": "Text",
                      "updateQueue": null,
                    },
                    "isHidden": false,
                    "props": Object {
                      "children": "Hello world",
                    },
                    "rootContainerInstance": [Circular],
                    "tag": "INSTANCE",
                    "type": "Text",
                  },
                ],
                "createNodeMock": [Function],
                "tag": "CONTAINER",
              },
              "context": Object {},
              "current": [Circular],
              "entangledLanes": 0,
              "entanglements": Array [
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "eventTimes": Array [
                -1,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "expirationTimes": Array [
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
              ],
              "expiredLanes": 0,
              "finishedLanes": 0,
              "finishedWork": null,
              "hydrate": false,
              "interactionThreadID": 2,
              "memoizedInteractions": Set {},
              "mutableReadLanes": 0,
              "pendingChildren": null,
              "pendingContext": null,
              "pendingInteractionMap": Map {},
              "pendingLanes": 0,
              "pingCache": null,
              "pingedLanes": 0,
              "suspendedLanes": 0,
              "tag": 0,
              "timeoutHandle": -1,
            },
            "tag": 3,
            "treeBaseDuration": 0,
            "type": null,
            "updateQueue": Object {
              "baseState": null,
              "effects": null,
              "firstBaseUpdate": Object {
                "callback": null,
                "eventTime": 170,
                "lane": 1,
                "next": null,
                "payload": Object {
                  "element": <Memo>
                    Hello world
                  </Memo>,
                },
                "tag": 0,
              },
              "lastBaseUpdate": Object {
                "callback": null,
                "eventTime": 170,
                "lane": 1,
                "next": null,
                "payload": Object {
                  "element": <Memo>
                    Hello world
                  </Memo>,
                },
                "tag": 0,
              },
              "shared": Object {
                "pending": null,
              },
            },
          },
          "child": [Circular],
          "childLanes": 0,
          "dependencies": null,
          "elementType": null,
          "firstEffect": [Circular],
          "flags": 256,
          "index": 0,
          "key": null,
          "lanes": 0,
          "lastEffect": [Circular],
          "memoizedProps": null,
          "memoizedState": Object {
            "element": <Memo>
              Hello world
            </Memo>,
          },
          "mode": 0,
          "nextEffect": null,
          "pendingProps": null,
          "ref": null,
          "return": null,
          "selfBaseDuration": 0,
          "sibling": null,
          "stateNode": FiberRootNode {
            "_debugRootType": "createLegacyRoot()",
            "callbackNode": null,
            "callbackPriority": 15,
            "containerInfo": Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "isHidden": false,
                      "tag": "TEXT",
                      "text": "Hello world",
                    },
                  ],
                  "internalInstanceHandle": FiberNode {
                    "_debugHookTypes": null,
                    "_debugID": 13,
                    "_debugNeedsRemount": false,
                    "_debugOwner": [Circular],
                    "_debugSource": null,
                    "actualDuration": 0,
                    "actualStartTime": -1,
                    "alternate": null,
                    "child": FiberNode {
                      "_debugHookTypes": null,
                      "_debugID": 14,
                      "_debugNeedsRemount": false,
                      "_debugOwner": null,
                      "_debugSource": null,
                      "actualDuration": 0,
                      "actualStartTime": -1,
                      "alternate": null,
                      "child": null,
                      "childLanes": 0,
                      "dependencies": null,
                      "elementType": null,
                      "firstEffect": null,
                      "flags": 0,
                      "index": 0,
                      "key": null,
                      "lanes": 0,
                      "lastEffect": null,
                      "memoizedProps": "Hello world",
                      "memoizedState": null,
                      "mode": 0,
                      "nextEffect": null,
                      "pendingProps": "Hello world",
                      "ref": null,
                      "return": [Circular],
                      "selfBaseDuration": 0,
                      "sibling": null,
                      "stateNode": Object {
                        "isHidden": false,
                        "tag": "TEXT",
                        "text": "Hello world",
                      },
                      "tag": 6,
                      "treeBaseDuration": 0,
                      "type": null,
                      "updateQueue": null,
                    },
                    "childLanes": 0,
                    "dependencies": null,
                    "elementType": "Text",
                    "firstEffect": null,
                    "flags": 0,
                    "index": 0,
                    "key": null,
                    "lanes": 0,
                    "lastEffect": null,
                    "memoizedProps": Object {
                      "children": "Hello world",
                    },
                    "memoizedState": null,
                    "mode": 0,
                    "nextEffect": null,
                    "pendingProps": Object {
                      "children": "Hello world",
                    },
                    "ref": null,
                    "return": [Circular],
                    "selfBaseDuration": 0,
                    "sibling": null,
                    "stateNode": [Circular],
                    "tag": 5,
                    "treeBaseDuration": 0,
                    "type": "Text",
                    "updateQueue": null,
                  },
                  "isHidden": false,
                  "props": Object {
                    "children": "Hello world",
                  },
                  "rootContainerInstance": [Circular],
                  "tag": "INSTANCE",
                  "type": "Text",
                },
              ],
              "createNodeMock": [Function],
              "tag": "CONTAINER",
            },
            "context": Object {},
            "current": [Circular],
            "entangledLanes": 0,
            "entanglements": Array [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "eventTimes": Array [
              -1,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "expirationTimes": Array [
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
            ],
            "expiredLanes": 0,
            "finishedLanes": 0,
            "finishedWork": null,
            "hydrate": false,
            "interactionThreadID": 2,
            "memoizedInteractions": Set {},
            "mutableReadLanes": 0,
            "pendingChildren": null,
            "pendingContext": null,
            "pendingInteractionMap": Map {},
            "pendingLanes": 0,
            "pingCache": null,
            "pingedLanes": 0,
            "suspendedLanes": 0,
            "tag": 0,
            "timeoutHandle": -1,
          },
          "tag": 3,
          "treeBaseDuration": 0,
          "type": null,
          "updateQueue": Object {
            "baseState": Object {
              "element": <Memo>
                Hello world
              </Memo>,
            },
            "effects": null,
            "firstBaseUpdate": null,
            "lastBaseUpdate": null,
            "shared": Object {
              "pending": null,
            },
          },
        },
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": null,
        "tag": 14,
        "treeBaseDuration": 0,
        "type": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "updateQueue": null,
      },
      "selfBaseDuration": 0,
      "sibling": null,
      "stateNode": null,
      "tag": 11,
      "treeBaseDuration": 0,
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
      "updateQueue": null,
    },
    "_debugSource": null,
    "actualDuration": 0,
    "actualStartTime": -1,
    "alternate": null,
    "child": FiberNode {
      "_debugHookTypes": null,
      "_debugID": 13,
      "_debugNeedsRemount": false,
      "_debugOwner": [Circular],
      "_debugSource": null,
      "actualDuration": 0,
      "actualStartTime": -1,
      "alternate": null,
      "child": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 14,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": null,
        "child": null,
        "childLanes": 0,
        "dependencies": null,
        "elementType": null,
        "firstEffect": null,
        "flags": 0,
        "index": 0,
        "key": null,
        "lanes": 0,
        "lastEffect": null,
        "memoizedProps": "Hello world",
        "memoizedState": null,
        "mode": 0,
        "nextEffect": null,
        "pendingProps": "Hello world",
        "ref": null,
        "return": [Circular],
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": Object {
          "isHidden": false,
          "tag": "TEXT",
          "text": "Hello world",
        },
        "tag": 6,
        "treeBaseDuration": 0,
        "type": null,
        "updateQueue": null,
      },
      "childLanes": 0,
      "dependencies": null,
      "elementType": "Text",
      "firstEffect": null,
      "flags": 0,
      "index": 0,
      "key": null,
      "lanes": 0,
      "lastEffect": null,
      "memoizedProps": Object {
        "children": "Hello world",
      },
      "memoizedState": null,
      "mode": 0,
      "nextEffect": null,
      "pendingProps": Object {
        "children": "Hello world",
      },
      "ref": null,
      "return": [Circular],
      "selfBaseDuration": 0,
      "sibling": null,
      "stateNode": Object {
        "children": Array [
          Object {
            "isHidden": false,
            "tag": "TEXT",
            "text": "Hello world",
          },
        ],
        "internalInstanceHandle": [Circular],
        "isHidden": false,
        "props": Object {
          "children": "Hello world",
        },
        "rootContainerInstance": Object {
          "children": Array [
            [Circular],
          ],
          "createNodeMock": [Function],
          "tag": "CONTAINER",
        },
        "tag": "INSTANCE",
        "type": "Text",
      },
      "tag": 5,
      "treeBaseDuration": 0,
      "type": "Text",
      "updateQueue": null,
    },
    "childLanes": 0,
    "dependencies": null,
    "elementType": [Function],
    "firstEffect": null,
    "flags": 129,
    "index": 0,
    "key": null,
    "lanes": 0,
    "lastEffect": null,
    "memoizedProps": Object {
      "children": "Hello world",
    },
    "memoizedState": null,
    "mode": 0,
    "nextEffect": null,
    "pendingProps": Object {
      "children": "Hello world",
    },
    "ref": Object {
      "current": [Circular],
    },
    "return": FiberNode {
      "_debugHookTypes": null,
      "_debugID": 11,
      "_debugNeedsRemount": false,
      "_debugOwner": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 10,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": null,
        "child": [Circular],
        "childLanes": 0,
        "dependencies": null,
        "elementType": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "firstEffect": [Circular],
        "flags": 0,
        "index": 0,
        "key": null,
        "lanes": 0,
        "lastEffect": [Circular],
        "memoizedProps": Object {
          "children": "Hello world",
        },
        "memoizedState": null,
        "mode": 0,
        "nextEffect": null,
        "pendingProps": Object {
          "children": "Hello world",
        },
        "ref": Object {
          "current": [Circular],
        },
        "return": FiberNode {
          "_debugHookTypes": null,
          "_debugID": 8,
          "_debugNeedsRemount": false,
          "_debugOwner": null,
          "_debugSource": null,
          "actualDuration": 0,
          "actualStartTime": -1,
          "alternate": FiberNode {
            "_debugHookTypes": null,
            "_debugID": 8,
            "_debugNeedsRemount": false,
            "_debugOwner": null,
            "_debugSource": null,
            "actualDuration": 0,
            "actualStartTime": -1,
            "alternate": [Circular],
            "child": null,
            "childLanes": 0,
            "dependencies": null,
            "elementType": null,
            "firstEffect": null,
            "flags": 0,
            "index": 0,
            "key": null,
            "lanes": 1,
            "lastEffect": null,
            "memoizedProps": null,
            "memoizedState": null,
            "mode": 0,
            "nextEffect": null,
            "pendingProps": null,
            "ref": null,
            "return": null,
            "selfBaseDuration": 0,
            "sibling": null,
            "stateNode": FiberRootNode {
              "_debugRootType": "createLegacyRoot()",
              "callbackNode": null,
              "callbackPriority": 15,
              "containerInfo": Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "isHidden": false,
                        "tag": "TEXT",
                        "text": "Hello world",
                      },
                    ],
                    "internalInstanceHandle": FiberNode {
                      "_debugHookTypes": null,
                      "_debugID": 13,
                      "_debugNeedsRemount": false,
                      "_debugOwner": [Circular],
                      "_debugSource": null,
                      "actualDuration": 0,
                      "actualStartTime": -1,
                      "alternate": null,
                      "child": FiberNode {
                        "_debugHookTypes": null,
                        "_debugID": 14,
                        "_debugNeedsRemount": false,
                        "_debugOwner": null,
                        "_debugSource": null,
                        "actualDuration": 0,
                        "actualStartTime": -1,
                        "alternate": null,
                        "child": null,
                        "childLanes": 0,
                        "dependencies": null,
                        "elementType": null,
                        "firstEffect": null,
                        "flags": 0,
                        "index": 0,
                        "key": null,
                        "lanes": 0,
                        "lastEffect": null,
                        "memoizedProps": "Hello world",
                        "memoizedState": null,
                        "mode": 0,
                        "nextEffect": null,
                        "pendingProps": "Hello world",
                        "ref": null,
                        "return": [Circular],
                        "selfBaseDuration": 0,
                        "sibling": null,
                        "stateNode": Object {
                          "isHidden": false,
                          "tag": "TEXT",
                          "text": "Hello world",
                        },
                        "tag": 6,
                        "treeBaseDuration": 0,
                        "type": null,
                        "updateQueue": null,
                      },
                      "childLanes": 0,
                      "dependencies": null,
                      "elementType": "Text",
                      "firstEffect": null,
                      "flags": 0,
                      "index": 0,
                      "key": null,
                      "lanes": 0,
                      "lastEffect": null,
                      "memoizedProps": Object {
                        "children": "Hello world",
                      },
                      "memoizedState": null,
                      "mode": 0,
                      "nextEffect": null,
                      "pendingProps": Object {
                        "children": "Hello world",
                      },
                      "ref": null,
                      "return": [Circular],
                      "selfBaseDuration": 0,
                      "sibling": null,
                      "stateNode": [Circular],
                      "tag": 5,
                      "treeBaseDuration": 0,
                      "type": "Text",
                      "updateQueue": null,
                    },
                    "isHidden": false,
                    "props": Object {
                      "children": "Hello world",
                    },
                    "rootContainerInstance": [Circular],
                    "tag": "INSTANCE",
                    "type": "Text",
                  },
                ],
                "createNodeMock": [Function],
                "tag": "CONTAINER",
              },
              "context": Object {},
              "current": [Circular],
              "entangledLanes": 0,
              "entanglements": Array [
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "eventTimes": Array [
                -1,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "expirationTimes": Array [
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
              ],
              "expiredLanes": 0,
              "finishedLanes": 0,
              "finishedWork": null,
              "hydrate": false,
              "interactionThreadID": 2,
              "memoizedInteractions": Set {},
              "mutableReadLanes": 0,
              "pendingChildren": null,
              "pendingContext": null,
              "pendingInteractionMap": Map {},
              "pendingLanes": 0,
              "pingCache": null,
              "pingedLanes": 0,
              "suspendedLanes": 0,
              "tag": 0,
              "timeoutHandle": -1,
            },
            "tag": 3,
            "treeBaseDuration": 0,
            "type": null,
            "updateQueue": Object {
              "baseState": null,
              "effects": null,
              "firstBaseUpdate": Object {
                "callback": null,
                "eventTime": 170,
                "lane": 1,
                "next": null,
                "payload": Object {
                  "element": <Memo>
                    Hello world
                  </Memo>,
                },
                "tag": 0,
              },
              "lastBaseUpdate": Object {
                "callback": null,
                "eventTime": 170,
                "lane": 1,
                "next": null,
                "payload": Object {
                  "element": <Memo>
                    Hello world
                  </Memo>,
                },
                "tag": 0,
              },
              "shared": Object {
                "pending": null,
              },
            },
          },
          "child": [Circular],
          "childLanes": 0,
          "dependencies": null,
          "elementType": null,
          "firstEffect": [Circular],
          "flags": 256,
          "index": 0,
          "key": null,
          "lanes": 0,
          "lastEffect": [Circular],
          "memoizedProps": null,
          "memoizedState": Object {
            "element": <Memo>
              Hello world
            </Memo>,
          },
          "mode": 0,
          "nextEffect": null,
          "pendingProps": null,
          "ref": null,
          "return": null,
          "selfBaseDuration": 0,
          "sibling": null,
          "stateNode": FiberRootNode {
            "_debugRootType": "createLegacyRoot()",
            "callbackNode": null,
            "callbackPriority": 15,
            "containerInfo": Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "isHidden": false,
                      "tag": "TEXT",
                      "text": "Hello world",
                    },
                  ],
                  "internalInstanceHandle": FiberNode {
                    "_debugHookTypes": null,
                    "_debugID": 13,
                    "_debugNeedsRemount": false,
                    "_debugOwner": [Circular],
                    "_debugSource": null,
                    "actualDuration": 0,
                    "actualStartTime": -1,
                    "alternate": null,
                    "child": FiberNode {
                      "_debugHookTypes": null,
                      "_debugID": 14,
                      "_debugNeedsRemount": false,
                      "_debugOwner": null,
                      "_debugSource": null,
                      "actualDuration": 0,
                      "actualStartTime": -1,
                      "alternate": null,
                      "child": null,
                      "childLanes": 0,
                      "dependencies": null,
                      "elementType": null,
                      "firstEffect": null,
                      "flags": 0,
                      "index": 0,
                      "key": null,
                      "lanes": 0,
                      "lastEffect": null,
                      "memoizedProps": "Hello world",
                      "memoizedState": null,
                      "mode": 0,
                      "nextEffect": null,
                      "pendingProps": "Hello world",
                      "ref": null,
                      "return": [Circular],
                      "selfBaseDuration": 0,
                      "sibling": null,
                      "stateNode": Object {
                        "isHidden": false,
                        "tag": "TEXT",
                        "text": "Hello world",
                      },
                      "tag": 6,
                      "treeBaseDuration": 0,
                      "type": null,
                      "updateQueue": null,
                    },
                    "childLanes": 0,
                    "dependencies": null,
                    "elementType": "Text",
                    "firstEffect": null,
                    "flags": 0,
                    "index": 0,
                    "key": null,
                    "lanes": 0,
                    "lastEffect": null,
                    "memoizedProps": Object {
                      "children": "Hello world",
                    },
                    "memoizedState": null,
                    "mode": 0,
                    "nextEffect": null,
                    "pendingProps": Object {
                      "children": "Hello world",
                    },
                    "ref": null,
                    "return": [Circular],
                    "selfBaseDuration": 0,
                    "sibling": null,
                    "stateNode": [Circular],
                    "tag": 5,
                    "treeBaseDuration": 0,
                    "type": "Text",
                    "updateQueue": null,
                  },
                  "isHidden": false,
                  "props": Object {
                    "children": "Hello world",
                  },
                  "rootContainerInstance": [Circular],
                  "tag": "INSTANCE",
                  "type": "Text",
                },
              ],
              "createNodeMock": [Function],
              "tag": "CONTAINER",
            },
            "context": Object {},
            "current": [Circular],
            "entangledLanes": 0,
            "entanglements": Array [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "eventTimes": Array [
              -1,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "expirationTimes": Array [
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
            ],
            "expiredLanes": 0,
            "finishedLanes": 0,
            "finishedWork": null,
            "hydrate": false,
            "interactionThreadID": 2,
            "memoizedInteractions": Set {},
            "mutableReadLanes": 0,
            "pendingChildren": null,
            "pendingContext": null,
            "pendingInteractionMap": Map {},
            "pendingLanes": 0,
            "pingCache": null,
            "pingedLanes": 0,
            "suspendedLanes": 0,
            "tag": 0,
            "timeoutHandle": -1,
          },
          "tag": 3,
          "treeBaseDuration": 0,
          "type": null,
          "updateQueue": Object {
            "baseState": Object {
              "element": <Memo>
                Hello world
              </Memo>,
            },
            "effects": null,
            "firstBaseUpdate": null,
            "lastBaseUpdate": null,
            "shared": Object {
              "pending": null,
            },
          },
        },
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": null,
        "tag": 14,
        "treeBaseDuration": 0,
        "type": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "updateQueue": null,
      },
      "_debugSource": null,
      "actualDuration": 0,
      "actualStartTime": -1,
      "alternate": null,
      "child": [Circular],
      "childLanes": 0,
      "dependencies": null,
      "elementType": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
      "firstEffect": [Circular],
      "flags": 1,
      "index": 0,
      "key": null,
      "lanes": 0,
      "lastEffect": [Circular],
      "memoizedProps": Object {
        "children": "Hello world",
      },
      "memoizedState": null,
      "mode": 0,
      "nextEffect": null,
      "pendingProps": Object {
        "children": "Hello world",
      },
      "ref": Object {
        "current": [Circular],
      },
      "return": FiberNode {
        "_debugHookTypes": null,
        "_debugID": 10,
        "_debugNeedsRemount": false,
        "_debugOwner": null,
        "_debugSource": null,
        "actualDuration": 0,
        "actualStartTime": -1,
        "alternate": null,
        "child": [Circular],
        "childLanes": 0,
        "dependencies": null,
        "elementType": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "firstEffect": [Circular],
        "flags": 0,
        "index": 0,
        "key": null,
        "lanes": 0,
        "lastEffect": [Circular],
        "memoizedProps": Object {
          "children": "Hello world",
        },
        "memoizedState": null,
        "mode": 0,
        "nextEffect": null,
        "pendingProps": Object {
          "children": "Hello world",
        },
        "ref": Object {
          "current": [Circular],
        },
        "return": FiberNode {
          "_debugHookTypes": null,
          "_debugID": 8,
          "_debugNeedsRemount": false,
          "_debugOwner": null,
          "_debugSource": null,
          "actualDuration": 0,
          "actualStartTime": -1,
          "alternate": FiberNode {
            "_debugHookTypes": null,
            "_debugID": 8,
            "_debugNeedsRemount": false,
            "_debugOwner": null,
            "_debugSource": null,
            "actualDuration": 0,
            "actualStartTime": -1,
            "alternate": [Circular],
            "child": null,
            "childLanes": 0,
            "dependencies": null,
            "elementType": null,
            "firstEffect": null,
            "flags": 0,
            "index": 0,
            "key": null,
            "lanes": 1,
            "lastEffect": null,
            "memoizedProps": null,
            "memoizedState": null,
            "mode": 0,
            "nextEffect": null,
            "pendingProps": null,
            "ref": null,
            "return": null,
            "selfBaseDuration": 0,
            "sibling": null,
            "stateNode": FiberRootNode {
              "_debugRootType": "createLegacyRoot()",
              "callbackNode": null,
              "callbackPriority": 15,
              "containerInfo": Object {
                "children": Array [
                  Object {
                    "children": Array [
                      Object {
                        "isHidden": false,
                        "tag": "TEXT",
                        "text": "Hello world",
                      },
                    ],
                    "internalInstanceHandle": FiberNode {
                      "_debugHookTypes": null,
                      "_debugID": 13,
                      "_debugNeedsRemount": false,
                      "_debugOwner": [Circular],
                      "_debugSource": null,
                      "actualDuration": 0,
                      "actualStartTime": -1,
                      "alternate": null,
                      "child": FiberNode {
                        "_debugHookTypes": null,
                        "_debugID": 14,
                        "_debugNeedsRemount": false,
                        "_debugOwner": null,
                        "_debugSource": null,
                        "actualDuration": 0,
                        "actualStartTime": -1,
                        "alternate": null,
                        "child": null,
                        "childLanes": 0,
                        "dependencies": null,
                        "elementType": null,
                        "firstEffect": null,
                        "flags": 0,
                        "index": 0,
                        "key": null,
                        "lanes": 0,
                        "lastEffect": null,
                        "memoizedProps": "Hello world",
                        "memoizedState": null,
                        "mode": 0,
                        "nextEffect": null,
                        "pendingProps": "Hello world",
                        "ref": null,
                        "return": [Circular],
                        "selfBaseDuration": 0,
                        "sibling": null,
                        "stateNode": Object {
                          "isHidden": false,
                          "tag": "TEXT",
                          "text": "Hello world",
                        },
                        "tag": 6,
                        "treeBaseDuration": 0,
                        "type": null,
                        "updateQueue": null,
                      },
                      "childLanes": 0,
                      "dependencies": null,
                      "elementType": "Text",
                      "firstEffect": null,
                      "flags": 0,
                      "index": 0,
                      "key": null,
                      "lanes": 0,
                      "lastEffect": null,
                      "memoizedProps": Object {
                        "children": "Hello world",
                      },
                      "memoizedState": null,
                      "mode": 0,
                      "nextEffect": null,
                      "pendingProps": Object {
                        "children": "Hello world",
                      },
                      "ref": null,
                      "return": [Circular],
                      "selfBaseDuration": 0,
                      "sibling": null,
                      "stateNode": [Circular],
                      "tag": 5,
                      "treeBaseDuration": 0,
                      "type": "Text",
                      "updateQueue": null,
                    },
                    "isHidden": false,
                    "props": Object {
                      "children": "Hello world",
                    },
                    "rootContainerInstance": [Circular],
                    "tag": "INSTANCE",
                    "type": "Text",
                  },
                ],
                "createNodeMock": [Function],
                "tag": "CONTAINER",
              },
              "context": Object {},
              "current": [Circular],
              "entangledLanes": 0,
              "entanglements": Array [
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "eventTimes": Array [
                -1,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
                0,
              ],
              "expirationTimes": Array [
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
                -1,
              ],
              "expiredLanes": 0,
              "finishedLanes": 0,
              "finishedWork": null,
              "hydrate": false,
              "interactionThreadID": 2,
              "memoizedInteractions": Set {},
              "mutableReadLanes": 0,
              "pendingChildren": null,
              "pendingContext": null,
              "pendingInteractionMap": Map {},
              "pendingLanes": 0,
              "pingCache": null,
              "pingedLanes": 0,
              "suspendedLanes": 0,
              "tag": 0,
              "timeoutHandle": -1,
            },
            "tag": 3,
            "treeBaseDuration": 0,
            "type": null,
            "updateQueue": Object {
              "baseState": null,
              "effects": null,
              "firstBaseUpdate": Object {
                "callback": null,
                "eventTime": 170,
                "lane": 1,
                "next": null,
                "payload": Object {
                  "element": <Memo>
                    Hello world
                  </Memo>,
                },
                "tag": 0,
              },
              "lastBaseUpdate": Object {
                "callback": null,
                "eventTime": 170,
                "lane": 1,
                "next": null,
                "payload": Object {
                  "element": <Memo>
                    Hello world
                  </Memo>,
                },
                "tag": 0,
              },
              "shared": Object {
                "pending": null,
              },
            },
          },
          "child": [Circular],
          "childLanes": 0,
          "dependencies": null,
          "elementType": null,
          "firstEffect": [Circular],
          "flags": 256,
          "index": 0,
          "key": null,
          "lanes": 0,
          "lastEffect": [Circular],
          "memoizedProps": null,
          "memoizedState": Object {
            "element": <Memo>
              Hello world
            </Memo>,
          },
          "mode": 0,
          "nextEffect": null,
          "pendingProps": null,
          "ref": null,
          "return": null,
          "selfBaseDuration": 0,
          "sibling": null,
          "stateNode": FiberRootNode {
            "_debugRootType": "createLegacyRoot()",
            "callbackNode": null,
            "callbackPriority": 15,
            "containerInfo": Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "isHidden": false,
                      "tag": "TEXT",
                      "text": "Hello world",
                    },
                  ],
                  "internalInstanceHandle": FiberNode {
                    "_debugHookTypes": null,
                    "_debugID": 13,
                    "_debugNeedsRemount": false,
                    "_debugOwner": [Circular],
                    "_debugSource": null,
                    "actualDuration": 0,
                    "actualStartTime": -1,
                    "alternate": null,
                    "child": FiberNode {
                      "_debugHookTypes": null,
                      "_debugID": 14,
                      "_debugNeedsRemount": false,
                      "_debugOwner": null,
                      "_debugSource": null,
                      "actualDuration": 0,
                      "actualStartTime": -1,
                      "alternate": null,
                      "child": null,
                      "childLanes": 0,
                      "dependencies": null,
                      "elementType": null,
                      "firstEffect": null,
                      "flags": 0,
                      "index": 0,
                      "key": null,
                      "lanes": 0,
                      "lastEffect": null,
                      "memoizedProps": "Hello world",
                      "memoizedState": null,
                      "mode": 0,
                      "nextEffect": null,
                      "pendingProps": "Hello world",
                      "ref": null,
                      "return": [Circular],
                      "selfBaseDuration": 0,
                      "sibling": null,
                      "stateNode": Object {
                        "isHidden": false,
                        "tag": "TEXT",
                        "text": "Hello world",
                      },
                      "tag": 6,
                      "treeBaseDuration": 0,
                      "type": null,
                      "updateQueue": null,
                    },
                    "childLanes": 0,
                    "dependencies": null,
                    "elementType": "Text",
                    "firstEffect": null,
                    "flags": 0,
                    "index": 0,
                    "key": null,
                    "lanes": 0,
                    "lastEffect": null,
                    "memoizedProps": Object {
                      "children": "Hello world",
                    },
                    "memoizedState": null,
                    "mode": 0,
                    "nextEffect": null,
                    "pendingProps": Object {
                      "children": "Hello world",
                    },
                    "ref": null,
                    "return": [Circular],
                    "selfBaseDuration": 0,
                    "sibling": null,
                    "stateNode": [Circular],
                    "tag": 5,
                    "treeBaseDuration": 0,
                    "type": "Text",
                    "updateQueue": null,
                  },
                  "isHidden": false,
                  "props": Object {
                    "children": "Hello world",
                  },
                  "rootContainerInstance": [Circular],
                  "tag": "INSTANCE",
                  "type": "Text",
                },
              ],
              "createNodeMock": [Function],
              "tag": "CONTAINER",
            },
            "context": Object {},
            "current": [Circular],
            "entangledLanes": 0,
            "entanglements": Array [
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "eventTimes": Array [
              -1,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
              0,
            ],
            "expirationTimes": Array [
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
              -1,
            ],
            "expiredLanes": 0,
            "finishedLanes": 0,
            "finishedWork": null,
            "hydrate": false,
            "interactionThreadID": 2,
            "memoizedInteractions": Set {},
            "mutableReadLanes": 0,
            "pendingChildren": null,
            "pendingContext": null,
            "pendingInteractionMap": Map {},
            "pendingLanes": 0,
            "pingCache": null,
            "pingedLanes": 0,
            "suspendedLanes": 0,
            "tag": 0,
            "timeoutHandle": -1,
          },
          "tag": 3,
          "treeBaseDuration": 0,
          "type": null,
          "updateQueue": Object {
            "baseState": Object {
              "element": <Memo>
                Hello world
              </Memo>,
            },
            "effects": null,
            "firstBaseUpdate": null,
            "lastBaseUpdate": null,
            "shared": Object {
              "pending": null,
            },
          },
        },
        "selfBaseDuration": 0,
        "sibling": null,
        "stateNode": null,
        "tag": 14,
        "treeBaseDuration": 0,
        "type": Object {
          "$$typeof": Symbol(react.memo),
          "compare": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
        },
        "updateQueue": null,
      },
      "selfBaseDuration": 0,
      "sibling": null,
      "stateNode": null,
      "tag": 11,
      "treeBaseDuration": 0,
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      },
      "updateQueue": null,
    },
    "selfBaseDuration": 0,
    "sibling": null,
    "stateNode": [Circular],
    "tag": 1,
    "treeBaseDuration": 0,
    "type": [Function],
    "updateQueue": Object {
      "baseState": null,
      "effects": null,
      "firstBaseUpdate": null,
      "lastBaseUpdate": null,
      "shared": Object {
        "pending": null,
      },
    },
  },
  "context": Object {},
  "props": Object {
    "children": "Hello world",
  },
  "refs": Object {},
  "state": null,
  "updater": Object {
    "enqueueForceUpdate": [Function],
    "enqueueReplaceState": [Function],
    "enqueueSetState": [Function],
    "isMounted": [Function],
  },
}
`;

exports[`basic should render children correctly 1`] = `
<Text
  style={
    Object {
      "color": "tomato",
      "margin": 10,
      "padding": 4,
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 18,
        "textAlign": "center",
      }
    }
  >
    This is a Text with Text Inside
  </Text>
  This is outside Text
</Text>
`;

exports[`basic should render correctly 1`] = `
<Text>
  Hello, World
</Text>
`;

exports[`basic should render correctly with a style prop 1`] = `
<Text
  style={
    Object {
      "color": "tomato",
      "margin": 10,
      "padding": 4,
    }
  }
/>
`;
